# GeoToolKit

./: .copilotignore  .gitignore  .semgrep.yml  CI_CD_FIX_SUMMARY.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  MANIFEST.in  README.md  VALIDATION_REPORT.md  commitlint.config.mjs  example.yaml  geotoolkit.code-workspace  languages.json  multi-language-test.json  network-allowlist.txt  projects.json  pyproject.toml  run_production_test.sh  test-projects.json  test-report.md  test-scan-report.md  validation-all-report.md  validation-test.json
.devcontainer/: devcontainer.json  devtools.sh
.github/: CI-PERFORMANCE-GUIDE.md  RELEASE_TEMPLATE.md  copilot-guides.md  copilot-instructions.md
.github/actions/ci/: action.yml
.github/actions/python-uv/: action.yml  composite.yml
.github/workflows/: ci.yml  python-uv.yml
.specify/memory/: constitution.md
coverage-reports/: coverage-pytest.xml
data/: mock-db.json  mock-offline-db.json
docs/: CONTAINER_SECURITY.md  COPILOT_SETUP.md  ENHANCEMENT_SUMMARY.md  FALCO_ANALYSIS.md  OFFLINE.md  PROJECT_REVIEW.md
mcp/: README.md  __init__.py  manifest.json  server.py
mcp_server/: README.md  manifest.json  mcp_server.py
rules/semgrep/: default.semgrep.yml
scripts/: build_offline_db.py  demonstrate_all_features.py  load_testing.py  preflight_check.py  prepare_offline_artifacts.sh  production_validator.py  quick_validation.py  start_dast_quick.py  start_dast_targets.py  test_cli_functionality.py  validate_functionality.py  validation_executor.py  verify_copilot_setup.py  verify_deployment.py
seccomp/: osv-scanner-seccomp.json  semgrep-seccomp.json  trivy-seccomp.json  zap-seccomp.json
specs/001-a-comprehensive-automated/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-a-comprehensive-automated/contracts/: README.md
src/: main.py
src/models/: finding.py  project.py  scan.py
src/orchestration/: parser.py  podman_helper.py  workflow.py
src/orchestration/runners/: osv_runner.py  semgrep_runner.py  trivy_runner.py  zap_runner.py
src/reporting/: report.py
src/reporting/templates/: report.md
test-scan/: Dockerfile  requirements.txt  vulnerable_code.py
tests/: conftest.py
tests/integration/: test_prepare_offline_artifacts.py  test_projects.json  test_workflow.py
tests/production/: test_production_comprehensive.py  test_production_suite.py
tests/unit/: test_cli_main.py  test_comprehensive_workflow.py  test_dast_configuration.py  test_dockerfile_detection.py  test_finding.py  test_mcp_server.py  test_osv_runner.py  test_osv_runner_images.py  test_parser.py  test_project.py  test_scan.py  test_seccomp_sentinel.py  test_semgrep_config_selection.py  test_semgrep_runner.py  test_trivy_fallback.py  test_trivy_runner.py  test_trivy_seccomp_fallback.py  test_zap_allowlist_behavior.py  test_zap_runner.py
validation/: README.md  quick-validation-20250927-072651.json  quick-validation-20250927-072913.json  quick-validation-20250927-073146.json  quick-validation-20250928-133545.json
validation/configs/: container-projects.json  enhanced-projects.fixed.json  enhanced-projects.json
